# platformer-prototype

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  readme.md  startup.cmd  vcpkg.json
.github/workflows/: github-ci.yml
api/: CMakeLists.txt  main.cc
converter/: CMakeLists.txt  serializer.cc  serializer.h
converter/src/private/: serializer.cc
converter/src/public/: serializer.h
core/: CMakeLists.txt  main.cc
core/resources/: CMakeLists.txt
core/src/: collision_service.cc  game_loop.cc  game_loop.h  game_object.cc  game_object.h  game_state.cc  game_state.h  game_state_service.cc  game_state_service.h  info.cc  info.h  locomotion_fsm.h  player.cc  player.h  player_shape.cc  player_shape.h  scalable_grid.cc  scalable_grid.h  util.cc  util.h  vector_product_visualizer.cc  vector_product_visualizer.h  vector_shape.cc  vector_shape.h
core/src/private/: game_object.cc  game_state.cc
core/src/public/: collision_service.h  game_loop.h  game_object.h  game_state.h  player.h
frontend/: CMakeLists.txt  api.h  game_loop_ticker.h
frontend/async/: api_async.cc  core_game_loop.cc  core_game_loop.h
frontend/ggpo/: api_ggpo.cc  ggpo_client.h  input_args.h  net_game_loop.cc  net_game_loop.h
frontend/ggpo/network/: exception.h  stun_client.cc  stun_client.h  stun_protocol.h  udp_socket.h  udp_timeout_socket.cc
frontend/impl/: api.cc  game_loop_ticker.cc
frontend/src/private/: game_loop_ticker.cc
frontend/src/private/async/: api_async.cc
frontend/src/private/ggpo/: api_ggpo.cc
frontend/src/private/ggpo/network/: stun_client.cc  udp_timeout_socket.cc
frontend/src/private/sync/: api.cc
frontend/src/public/ggpo/: nongamestate.h
frontend/src/public/ggpo/network/: endpoint.h  hex.h
frontend/sync/: api.cc
model/: CMakeLists.txt  schema.proto
serialization/: CMakeLists.txt  message.proto  schema.proto  serializer.cc  serializer.h
showcases/: CMakeLists.txt  CMakeSources.cmake  app_showcase.cc  async_showcase.cc  core_showcase.cc  frontend_sync_showcase.cc  full_showcase.cc  ggpo_showcase.cc  main.cc  main_showcase.cc  serialization_showcase.cc  showcase.cc  showcase_context.h  sync_showcase.cc
showcases/app/: core_game_loop.cc  core_game_loop.h  net_game_loop.cc  net_game_loop.h
showcases/resources/: CMakeLists.txt
showcases/src/private/: showcase.cc
showcases/src/private/ui/: info.cc  player_shape.cc  rect_shape.cc  scalable_grid.cc  scene.cc  showcase_hud.cc  vector_product_visualizer.cc  vector_shape.cc
showcases/src/private/util/: util.cc
showcases/src/public/: showcase_callbacks.h  showcase_context.h
showcases/src/public/ui/: info.h  scalable_grid.h  scene.h
showcases/src/public/util/: util.h
showcases/ui/: info.cc  info.h  player_shape.cc  player_shape.h  rect_shape.cc  rect_shape.h  scalable_grid.cc  scalable_grid.h  scene.cc  scene.h  showcase_hud.cc  showcase_hud.h  vector_product_visualizer.cc  vector_product_visualizer.h  vector_shape.cc  vector_shape.h
showcases/util/: util.cc  util.h
test/: CMakeLists.txt  sample_test.cc  sample_test2.cc  sync_test.cc
